fix: scrolling on mobile devices in the Schedule component

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -5,7 +5,6 @@ html {
 .App {
   max-width: 100%;
   min-width: 320px;
-  min-height: 100vh;
   color: #FFFFFF;
   font-family: 'Inter', Arial, Helvetica, sans-serif;
   -moz-osx-font-smoothing: grayscale;
@@ -24,6 +23,12 @@ html {
 @media screen and (max-height: 710px) {
   html {
     font-size: 11px;
+  }
+}
+
+@media screen and (max-width: 780px) {
+  html {
+    font-size: 13px;
   }
 }
 
